# derm.rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  readme.md
.github/workflows/: rust-ci.yml
src/: font_utils.rs  image_utils.rs  main.rs  similarity.rs  traits.rs  visualize.rs
src/similarity/: hamming.rs  hausdorff.rs  levenshtein.rs
