[package]
name = "derm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
fontdue = { version = "0.9.2", features = ["parallel"] }
image = "0.25.2"
itertools = "0.13.0"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
unicode-width = "0.2.0"
